[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Yanis Guaye <yguaye44@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "~0.2.2"
aoc-runner-derive = "~0.2.2"
itertools = "~0.8.2"
lazy_static = "^1.4.0"
regex = "^1.3.1"
ordered-float = "^1.0.2"
num-integer = "~0.1.41"